--- a/test10.html
+++ b/test10.html
@@ -2075,6 +2075,9 @@
         hideSurvey();
       }
       //Instant Functions
+      lastSelectedSystem = $("system1");
+      
+      
       generateSystems();
       generatePlanets();
       generatePlanetStats();
@@ -2088,4 +2091,4 @@
     </script>
   </body>
 </html>
-<!--Version 16--->
+<!--Version 17--->
