--- a/test10.html
+++ b/test10.html
@@ -2075,7 +2075,7 @@
         hideSurvey();
       }
       //Instant Functions
-      lastSelectedSystem = $("system1");
+      let lastSelectedSystem = $("system1");
       
       
       generateSystems();
@@ -2091,4 +2091,4 @@
     </script>
   </body>
 </html>
-<!--Version 17--->
+<!--Version 18--->
