--- a/test11.html
+++ b/test11.html
@@ -9,7 +9,7 @@
                     position:fixed; display:block; top:750px; left:1100px; }
       
       .techMenu { position:fixed; width: 170px; height: 310px; top:100px; left:10px; font-family: 'MedievalSharp', cursive; font-size:80%; 
-        border: 2px solid lightgray; border-radius: 5px; overflow:scroll; display:none; gap: 3px; background: #1d4b96; transition:0.4s; 
+        border: 2px solid lightgray; border-radius: 5px; overflow:scroll; display:inline-grid; gap: 3px; background: #1d4b96; transition:0.4s; 
         grid-template-columns: repeat(2, 1fr); grid-auto-rows:auto;
         "techName1 techButton1"
         "techName2 techButton2"
@@ -65,4 +65,4 @@
     </script>
   </body>
 </html>
-<!--Version 6--->
+<!--Version 7--->
