--- a/test11.html
+++ b/test11.html
@@ -11,6 +11,7 @@
       .techMenu { position:fixed; width: 170px; height: 310px; top:100px; left:10px; font-family: 'MedievalSharp', cursive; font-size:80%; 
         border: 2px solid lightgray; border-radius: 5px; overflow:scroll; display:inline-grid; gap: 3px; background: #1d4b96; transition:0.4s; 
         grid-template-columns: repeat(2, 1fr); grid-auto-rows:auto;
+        grid-template-areas:
         "techName1 techButton1"
         "techName2 techButton2"
         "techName3 techButton3"
@@ -65,4 +66,4 @@
     </script>
   </body>
 </html>
-<!--Version 8--->
+<!--Version 9--->
