--- a/test11.html
+++ b/test11.html
@@ -48,15 +48,15 @@
     <button id="turnButton" onclick="nextTurn()"> Next Turn </button>
     
     <div class="techMenu">
-      <div class="techCell techName1"><span> Thing 1 </span></div>
+      <div class="techCell techName1"><span> Technology 1 </span></div>
       <div class="techCell techButton1"><button> Research </button></div>
-      <div class="techCell techName2"><span> Thing 2 </span></div>
+      <div class="techCell techName2"><span> Technology 2 </span></div>
       <div class="techCell techButton2"><button> Research </button></div>
-      <div class="techCell techName3"><span> Thing 3 </span></div>
+      <div class="techCell techName3"><span> Technology 3 </span></div>
       <div class="techCell techButton3"><button> Research </button></div>
-      <div class="techCell techName4"><span> Thing 4 </span></div>
+      <div class="techCell techName4"><span> Technology 4 </span></div>
       <div class="techCell techButton4"><button> Research </button></div>
-      <div class="techCell techName5"><span> Thing 5 </span></div>
+      <div class="techCell techName5"><span> Technology 5 </span></div>
       <div class="techCell techButton5"><button> Research </button></div>
     </div>
     
