--- a/test11.html
+++ b/test11.html
@@ -18,7 +18,7 @@
         "techName4 techButton4"
         "techName5 techButton5";
       }
-      .techCell { font-size:90%; background:#7096cf; text-align:center; padding-top:10px; }
+      .techCell { font-size:90%; background:#7096cf; text-align:center; padding-top:10px; margin-left:4px; }
       .techName1 { grid-area:techName1; }
       .techButton1 { grid-area:techButton1; }
       .techButton1 button { position:relative; width:70px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
@@ -66,4 +66,4 @@
     </script>
   </body>
 </html>
-<!--Version 10--->
+<!--Version 11--->
