--- a/test11.html
+++ b/test11.html
@@ -18,27 +18,27 @@
         "techName4 techButton4"
         "techName5 techButton5";
       }
-      .techCell { font-size:90%; background:#7096cf; text-align:center; padding-top:10px; margin-left:4px; }
+      .techCell { font-size:90%; background:#7096cf; text-align:center; padding-top:10px;  }
       .techName1 { grid-area:techName1; }
       .techButton1 { grid-area:techButton1; }
       .techButton1 button { position:relative; width:70px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:0px; }
       .techName2 { grid-area:techName2; }
       .techButton2 { grid-area:techButton2; }
       .techButton2 button { position:relative; width:70px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:0px; }
       .techName3 { grid-area:techName3; }
       .techButton3 { grid-area:techButton3; }
       .techButton3 button { position:relative; width:70px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:0px; }
       .techName4 { grid-area:techName4; }
       .techButton4 { grid-area:techButton4; }
       .techButton4 button { position:relative; width:70px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:0px; }
       .techName5 { grid-area:techName5; }
       .techButton5 { grid-area:techButton5; }
       .techButton5 button { position:relative; width:70px; height:40px; top:7.5px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:0px; }
       
     </style>
   </head>
