--- a/test11.html
+++ b/test11.html
@@ -82,6 +82,7 @@
       
       function activateTech1() {
         tech1Active = true;
+        console.log("tech1 Activated");
       }
       function activateTech2() {
         tech1Active = true;
