--- a/test11.html
+++ b/test11.html
@@ -49,15 +49,15 @@
     
     <div class="techMenu">
       <div class="techCell techName1"><span> Technology 1 </span></div>
-      <div class="techCell techButton1"><button> Research </button onclick="activateTech1()"></div>
+      <div class="techCell techButton1"><button onclick="activateTech1()"> Research </button></div>
       <div class="techCell techName2"><span> Technology 2 </span></div>
-      <div class="techCell techButton2"><button> Research </button onclick="activateTech2()"></div>
+      <div class="techCell techButton2"><button onclick="activateTech2()"> Research </button></div>
       <div class="techCell techName3"><span> Technology 3 </span></div>
-      <div class="techCell techButton3"><button> Research </button onclick="activateTech3()"></div>
+      <div class="techCell techButton3"><button onclick="activateTech3()"> Research </button></div>
       <div class="techCell techName4"><span> Technology 4 </span></div>
-      <div class="techCell techButton4"><button> Research </button onclick="activateTech4()"></div>
+      <div class="techCell techButton4"><button onclick="activateTech4()"> Research </button></div>
       <div class="techCell techName5"><span> Technology 5 </span></div>
-      <div class="techCell techButton5"><button> Research </button onclick="activateTech5()"></div>
+      <div class="techCell techButton5"><button onclick="activateTech5()"> Research </button></div>
     </div>
     
     <script>
@@ -105,4 +105,4 @@
     </script>
   </body>
 </html>
-<!--Version 14--->
+<!--Version 15--->
