--- a/test11.html
+++ b/test11.html
@@ -86,44 +86,48 @@
       }
       function activateTech2() {
         tech2Active = true;
+        console.log("tech2 Activated");
       }
       function activateTech3() {
         tech3Active = true;
+        console.log("tech3 Activated");
       }
       function activateTech4() {
         tech4Active = true;
+        console.log("tech4 Activated");
       }
       function activateTech5() {
         tech5Active = true;
+        console.log("tech5 Activated");
       }
       
       function nextTurn() {
         console.log("nextTurn");
-        if (tech1Active = true) {
+        if (tech1Active == true) {
           tech1Count++; 
         }
         if (tech1Count == 2) {
           alert("Technology 1 has been activated!");
         }
-        if (tech2Active = true) {
+        if (tech2Active == true) {
           tech2Count++; 
         }
         if (tech2Count == 2) {
           alert("Technology 2 has been activated!");
         }
-        if (tech3Active = true) {
+        if (tech3Active == true) {
           tech3Count++; 
         }
         if (tech3Count == 2) {
           alert("Technology 3 has been activated!");
         }
-        if (tech4Active = true) {
+        if (tech4Active == true) {
           tech4Count++; 
         }
         if (tech4Count == 2) {
           alert("Technology 4 has been activated!");
         }
-        if (tech5Active = true) {
+        if (tech5Active == true) {
           tech5Count++; 
         }
         if (tech5Count == 2) {
@@ -134,4 +138,4 @@
     </script>
   </body>
 </html>
-<!--Version 17--->
+<!--Version 18--->
