--- a/test11.html
+++ b/test11.html
@@ -158,7 +158,9 @@
         button1.style.background = "#7096cf";
       }
     
+      
+      generateTechButtons();
     </script>
   </body>
 </html>
-<!--Version 19--->
+<!--Version 20--->
