--- a/test11.html
+++ b/test11.html
@@ -109,7 +109,7 @@
         }
         if (tech1Count == 2) {
           alert("Technology 1 has been activated!");
-          var button = $("tb2");
+          var button = $("tB2");
           button.disabled = false;
           button.style.display = "#7096cf";
         }
@@ -118,7 +118,7 @@
         }
         if (tech2Count == 2) {
           alert("Technology 2 has been activated!");
-          var button = $("tb3");
+          var button = $("tB3");
           button.disabled = false;
           button.style.display = "#7096cf";
         }
@@ -127,7 +127,7 @@
         }
         if (tech3Count == 2) {
           alert("Technology 3 has been activated!");
-          var button = $("tb4");
+          var button = $("tB4");
           button.disabled = false;
           button.style.display = "#7096cf";
         }
@@ -136,7 +136,7 @@
         }
         if (tech4Count == 2) {
           alert("Technology 4 has been activated!");
-          var button = $("tb5");
+          var button = $("tB5");
           button.disabled = false;
           button.style.display = "#7096cf";
         }
@@ -163,4 +163,4 @@
     </script>
   </body>
 </html>
-<!--Version 20--->
+<!--Version 21--->
