--- a/test11.html
+++ b/test11.html
@@ -111,7 +111,7 @@
           alert("Technology 1 has been activated!");
           var button = $("tB2");
           button.disabled = false;
-          button.style.display = "#7096cf";
+          button.style.background = "#7096cf";
         }
         if (tech2Active == true) {
           tech2Count++; 
@@ -120,7 +120,7 @@
           alert("Technology 2 has been activated!");
           var button = $("tB3");
           button.disabled = false;
-          button.style.display = "#7096cf";
+          button.style.background = "#7096cf";
         }
         if (tech3Active == true) {
           tech3Count++; 
@@ -129,7 +129,7 @@
           alert("Technology 3 has been activated!");
           var button = $("tB4");
           button.disabled = false;
-          button.style.display = "#7096cf";
+          button.style.background = "#7096cf";
         }
         if (tech4Active == true) {
           tech4Count++; 
@@ -138,7 +138,7 @@
           alert("Technology 4 has been activated!");
           var button = $("tB5");
           button.disabled = false;
-          button.style.display = "#7096cf";
+          button.style.background = "#7096cf";
         }
         if (tech5Active == true) {
           tech5Count++; 
@@ -163,4 +163,4 @@
     </script>
   </body>
 </html>
-<!--Version 21--->
+<!--Version 22--->
