--- a/test11.html
+++ b/test11.html
@@ -23,23 +23,23 @@
       .techName1 { grid-area:techName1; }
       .techButton1 { grid-area:techButton1; padding-top:0px; }
       .techButton1 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:lightblue; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
       .techName2 { grid-area:techName2; }
       .techButton2 { grid-area:techButton2; padding-top:0px; }
       .techButton2 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:lightblue; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
       .techName3 { grid-area:techName3; }
       .techButton3 { grid-area:techButton3; padding-top:0px; }
       .techButton3 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:lightblue; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
       .techName4 { grid-area:techName4; }
       .techButton4 { grid-area:techButton4; padding-top:0px; }
       .techButton4 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:lightblue; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
       .techName5 { grid-area:techName5; }
       .techButton5 { grid-area:techButton5; padding-top:0px; }
       .techButton5 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
-        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:lightblue; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
       
     </style>
   </head>
@@ -111,7 +111,7 @@
           alert("Technology 1 has been activated!");
           var button = $("tB2");
           button.disabled = false;
-          button.style.background = "#7096cf";
+          button.style.background = "lightblue";
         }
         if (tech2Active == true) {
           tech2Count++; 
@@ -120,7 +120,7 @@
           alert("Technology 2 has been activated!");
           var button = $("tB3");
           button.disabled = false;
-          button.style.background = "#7096cf";
+          button.style.background = "lightblue";
         }
         if (tech3Active == true) {
           tech3Count++; 
@@ -129,7 +129,7 @@
           alert("Technology 3 has been activated!");
           var button = $("tB4");
           button.disabled = false;
-          button.style.background = "#7096cf";
+          button.style.background = "lightblue";
         }
         if (tech4Active == true) {
           tech4Count++; 
@@ -138,7 +138,7 @@
           alert("Technology 4 has been activated!");
           var button = $("tB5");
           button.disabled = false;
-          button.style.background = "#7096cf";
+          button.style.background = "lightblue";
         }
         if (tech5Active == true) {
           tech5Count++; 
@@ -163,4 +163,4 @@
     </script>
   </body>
 </html>
-<!--Version 22--->
+<!--Version 23--->
