--- a/test11.html
+++ b/test11.html
@@ -17,7 +17,12 @@
         "techName2 techButton2"
         "techName3 techButton3"
         "techName4 techButton4"
-        "techName5 techButton5";
+        "techName5 techButton5"
+        "techName6 techButton6"
+        "techName7 techButton7" 
+        "techName8 techButton8"
+        "techName9 techButton9" 
+        "techName10 techButton10";
       }
       .techCell { font-size:90%; background:#7096cf; text-align:center; padding-top:10px;  }
       .techName1 { grid-area:techName1; }
@@ -40,6 +45,26 @@
       .techButton5 { grid-area:techButton5; padding-top:0px; }
       .techButton5 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+      .techName6 { grid-area:techName1; }
+      .techButton6 { grid-area:techButton1; padding-top:0px; }
+      .techButton6 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+      .techName7 { grid-area:techName2; }
+      .techButton7 { grid-area:techButton2; padding-top:0px; }
+      .techButton7 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+      .techName8 { grid-area:techName3; }
+      .techButton8 { grid-area:techButton3; padding-top:0px; }
+      .techButton8 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+      .techName9 { grid-area:techName4; }
+      .techButton9 { grid-area:techButton4; padding-top:0px; }
+      .techButton9 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
+      .techName10 { grid-area:techName5; }
+      .techButton10 { grid-area:techButton5; padding-top:0px; }
+      .techButton10 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+        font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
       
     </style>
   </head>
@@ -59,6 +84,16 @@
       <div class="techCell techButton4"><button class="techButton" id="tB4" onclick="activateTech4()"> Research </button></div>
       <div class="techCell techName5"><span> Technology 5 </span></div>
       <div class="techCell techButton5"><button class="techButton" id="tB5" onclick="activateTech5()"> Research </button></div>
+      <div class="techCell techName6"><span> Technology 6 </span></div>
+      <div class="techCell techButton6"><button class="techButton" id="tB6" onclick="activateTech6()"> Research </button></div>
+      <div class="techCell techName7"><span> Technology 7 </span></div>
+      <div class="techCell techButton7"><button class="techButton" id="tB7" onclick="activateTech7()"> Research </button></div>
+      <div class="techCell techName8"><span> Technology 8 </span></div>
+      <div class="techCell techButton8"><button class="techButton" id="tB8" onclick="activateTech8()"> Research </button></div>
+      <div class="techCell techName9"><span> Technology 9 </span></div>
+      <div class="techCell techButton9"><button class="techButton" id="tB9" onclick="activateTech9()"> Research </button></div>
+      <div class="techCell techName10"><span> Technology 10 </span></div>
+      <div class="techCell techButton10"><button class="techButton" id="tB10" onclick="activateTech10()"> Research </button></div>
     </div>
     
     <script>
@@ -163,4 +198,4 @@
     </script>
   </body>
 </html>
-<!--Version 25--->
+<!--Version 26--->
