--- a/test11.html
+++ b/test11.html
@@ -20,45 +20,45 @@
         "techName5 techButton5";
       }
       .techCell { font-size:90%; background:#7096cf; text-align:center; padding-top:10px;  }
-      .techName1 { grid-area:techName1; }
-      .techButton1 { grid-area:techButton1; padding-top:0px; }
-      .techButton1 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName1 { grid-area:techName1; }
+      #techButton1 { grid-area:techButton1; padding-top:0px; }
+      #techButton1 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName2 { grid-area:techName2; }
-      .techButton2 { grid-area:techButton2; padding-top:0px; }
-      .techButton2 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName2 { grid-area:techName2; }
+      #techButton2 { grid-area:techButton2; padding-top:0px; }
+      #techButton2 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName3 { grid-area:techName3; }
-      .techButton3 { grid-area:techButton3; padding-top:0px; }
-      .techButton3 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName3 { grid-area:techName3; }
+      #techButton3 { grid-area:techButton3; padding-top:0px; }
+      #techButton3 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName4 { grid-area:techName4; }
-      .techButton4 { grid-area:techButton4; padding-top:0px; }
-      .techButton4 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName4 { grid-area:techName4; }
+      #techButton4 { grid-area:techButton4; padding-top:0px; }
+      #techButton4 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName5 { grid-area:techName5; }
-      .techButton5 { grid-area:techButton5; padding-top:0px; }
-      .techButton5 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName5 { grid-area:techName5; }
+      #techButton5 { grid-area:techButton5; padding-top:0px; }
+      #techButton5 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName6 { grid-area:techName1; }
-      .techButton6 { grid-area:techButton1; padding-top:0px; }
-      .techButton6 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName6 { grid-area:techName1; }
+      #techButton6 { grid-area:techButton1; padding-top:0px; }
+      #techButton6 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName7 { grid-area:techName2; }
-      .techButton7 { grid-area:techButton2; padding-top:0px; }
-      .techButton7 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName7 { grid-area:techName2; }
+      #techButton7 { grid-area:techButton2; padding-top:0px; }
+      #techButton7 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName8 { grid-area:techName3; }
-      .techButton8 { grid-area:techButton3; padding-top:0px; }
-      .techButton8 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName8 { grid-area:techName3; }
+      #techButton8 { grid-area:techButton3; padding-top:0px; }
+      #techButton8 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName9 { grid-area:techName4; }
-      .techButton9 { grid-area:techButton4; padding-top:0px; }
-      .techButton9 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName9 { grid-area:techName4; }
+      #techButton9 { grid-area:techButton4; padding-top:0px; }
+      #techButton9 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
-      .techName10 { grid-area:techName5; }
-      .techButton10 { grid-area:techButton5; padding-top:0px; }
-      .techButton10 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
+      #techName10 { grid-area:techName5; }
+      #techButton10 { grid-area:techButton5; padding-top:0px; }
+      #techButton10 button { position:relative; width:70px; height:40px; top:9px; left:1.5px; display:block; border: 2px solid lightgray; border-radius:20%;
         font-family: 'IM Fell French Canon', serif; padding:5px; background:#7096cf; font-family: 'MedievalSharp', cursive; margin-left:4px; padding-top:5px; }
       
     </style>
@@ -235,4 +235,4 @@
     </script>
   </body>
 </html>
-<!--Version 28--->
+<!--Version 29--->
