--- a/test11.html
+++ b/test11.html
@@ -169,8 +169,9 @@
         }
         if (tech1Count == 2) {
           alert("Technology 1 has been activated!");
-          var button = $("tB2");
-          button.disabled = false;
+          var button = $("techButton6");
+          button.style.background = "#7096cf";
+          var name = $("techName6");
           button.style.background = "#7096cf";
         }
         if (tech2Active == true) {
@@ -178,8 +179,9 @@
         }
         if (tech2Count == 2) {
           alert("Technology 2 has been activated!");
-          var button = $("tB3");
-          button.disabled = false;
+          var button = $("techButton7");
+          button.style.background = "#7096cf";
+          var name = $("techName7");
           button.style.background = "#7096cf";
         }
         if (tech3Active == true) {
@@ -187,8 +189,9 @@
         }
         if (tech3Count == 2) {
           alert("Technology 3 has been activated!");
-          var button = $("tB4");
-          button.disabled = false;
+          var button = $("techButton8");
+          button.style.background = "#7096cf";
+          var name = $("techName8");
           button.style.background = "#7096cf";
         }
         if (tech4Active == true) {
@@ -196,8 +199,9 @@
         }
         if (tech4Count == 2) {
           alert("Technology 4 has been activated!");
-          var button = $("tB5");
-          button.disabled = false;
+          var button = $("techButton9");
+          button.style.background = "#7096cf";
+          var name = $("techName9");
           button.style.background = "#7096cf";
         }
         if (tech5Active == true) {
@@ -205,14 +209,14 @@
         }
         if (tech5Count == 2) {
           alert("Technology 5 has been activated!");
+          var button = $("techButton10");
+          button.style.background = "#7096cf";
+          var name = $("techName10");
+          button.style.background = "#7096cf";
         }
       }
       function generateTechButtons() {
         var allTechButtons = $$('.techButton');
-        for (const tBEl of allTechButtons) {
-          tBEl.disabled = true;
-          tBEl.style.background = "lightgray";
-        }
         var button1 = $("tB1");
         button1.disabled = false;
         button1.style.background = "#7096cf";
@@ -235,4 +239,4 @@
     </script>
   </body>
 </html>
-<!--Version 29--->
+<!--Version 30--->
